install posthog at right level

--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.272.0",
     "next": "^13.4.13",
+    "posthog-js": "^1.93.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
