--- a/cms/package.json
+++ b/cms/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.59.0",
+    "sanity-plugin-computed-field": "^2.0.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
